--- a/ite/intest1.html
+++ b/ite/intest1.html
@@ -194,7 +194,14 @@
 
     <!-- Scroll to Top Button -->
     <button id="scrollTopBtn" title="Go to top"
-      class="hidden fixed bottom-8 right-8 z-50 bg-blue-600 text-white rounded-full p-4 shadow-lg hover:bg-blue-700 transition duration-300">
+      class="hidden fixed bottom-6 right-6 z-50
+             bg-gray-800/60 dark:bg-gray-200/60
+             text-white dark:text-black
+             rounded-full p-2.5
+             backdrop-blur
+             shadow-sm
+             hover:bg-gray-800/80 dark:hover:bg-gray-200/80
+             transition-all duration-300 opacity-0">
       ↑
     </button>
 
@@ -312,10 +319,12 @@
       // Scroll to top
       const scrollTopBtn = document.getElementById("scrollTopBtn");
       window.onscroll = function() {
-        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+        if (document.body.scrollTop > 400 || document.documentElement.scrollTop > 400) {
           scrollTopBtn.classList.remove("hidden");
+          scrollTopBtn.classList.remove("opacity-0");
         } else {
-          scrollTopBtn.classList.add("hidden");
+          scrollTopBtn.classList.add("opacity-0");
+          setTimeout(() => scrollTopBtn.classList.add("hidden"), 200);
         }
       };
 
