--- a/ite/intest1.html
+++ b/ite/intest1.html
@@ -140,7 +140,10 @@
               <p class="text-gray-600 dark:text-gray-400 text-sm line-clamp-2 mb-3">
                 Compact FT8 setup using a small flat panel antenna, low-power SDR transceiver and minimal gear — ideal for portable operation and field days.
               </p>
-              <span class="text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">Read more →</span>
+              <a href="/posts/working-qo100-without-dish.html"
+                 class="relative z-30 text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">
+                Read more →
+              </a>
             </div>
           </article>
 
@@ -161,7 +164,10 @@
               <p class="text-gray-600 dark:text-gray-400 text-sm line-clamp-2 mb-3">
                 Simple, lightweight frequency tracking solution using Raspberry Pi Zero W and cheap components for smooth LEO satellite passes.
               </p>
-              <span class="text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">Read more →</span>
+              <a href="/posts/doppler-controller-rpi.html"
+                 class="relative z-30 text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">
+                Read more →
+              </a>
             </div>
           </article>
 
