--- a/eme-noise-mapper/user-guide.html
+++ b/eme-noise-mapper/user-guide.html
@@ -825,36 +825,24 @@
     
   </div>
   </div>
-  <!-- Scroll to Top Button -->
-  <button id="scrollTopBtn" title="Go to top"
-    class="fixed bottom-6 right-6 z-50
-           bg-gray-800/60 dark:bg-gray-200/60
-           text-white dark:text-black
-           rounded-full p-2.5
-           backdrop-blur
-           shadow-sm
-           hover:bg-gray-800/80 dark:hover:bg-gray-200/80
-           transition-all duration-300
-           opacity-0 pointer-events-none">
-    ↑
-  </button>
+  <button id="backToTop" title="Back to top">↑</button>
   <script>
-  // Scroll to top
-  const scrollTopBtn = document.getElementById("scrollTopBtn");
+    const btn = document.getElementById("backToTop");
 
-  window.addEventListener("scroll", () => {
-    if (window.scrollY > 300) {
-      scrollTopBtn.classList.remove("opacity-0", "pointer-events-none");
-    } else {
-      scrollTopBtn.classList.add("opacity-0", "pointer-events-none");
-    }
-  });
+    // Show button when scrolling down
+    window.onscroll = function () {
+      if (document.body.scrollTop > 400 || document.documentElement.scrollTop > 400) {
+        btn.style.display = "block";
+      } else {
+        btn.style.display = "none";
+      }
+    };
 
-  scrollTopBtn.addEventListener("click", () => {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-
-</script>
+    // Scroll to top when clicked
+    btn.onclick = function () {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    };
+  </script>
   <!-- Ko-Fi -->
   <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
   <script src="kofi.js"></script>
