--- a/eme-moon-ephemeris/index.html
+++ b/eme-moon-ephemeris/index.html
@@ -272,9 +272,9 @@
         });
         
         const galleryImages = [
-            "/2008-Moon_Ephemeris-F5SE.jpg",
-            "/2025-Moon-Ephemeris-F1EHN.jpg",
-            "/moon_ephemeris_2026.jpg"
+            "./2008-Moon_Ephemeris-F5SE.jpg",
+            "./2025-Moon-Ephemeris-F1EHN.jpg",
+            "./moon_ephemeris_2026.jpg"
           ];
 
           let currentIndex = 0;
@@ -308,7 +308,7 @@
     </script>
     <!-- Lightbox -->
     <div id="lightbox"
-         class="fixed inset-0 bg-black/90 z-50 hidden items-center justify-center p-4">
+         class="fixed inset-0 bg-black/90 z-50 hidden flex items-center justify-center p-4">
 
       <button onclick="closeLightbox()"
               class="absolute top-4 right-6 text-white text-3xl font-light hover:opacity-70">
