--- a/greencube-observer.html
+++ b/greencube-observer.html
@@ -339,5 +339,7 @@
       </div>
       <button class="notice-close" onclick="hideNotice()">✕</button>
     </div>
+    <!-- 100% privacy-first analytics -->
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   </body>
 </html>
