--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YST3WTEH3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-7YST3WTEH3');
-    </script>
-    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -58,7 +50,6 @@
 
       <!-- Tailwind CSS -->
       <script src="https://cdn.tailwindcss.com"></script>
-    </head>
 
   <style>
     @media screen and (prefers-reduced-data: reduce), print {
@@ -900,6 +891,7 @@
         window.scrollTo({ top: 0, behavior: 'smooth' });
       });
     </script>
-
+    <!-- 100% privacy-first analytics -->
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
