--- a/awards.html
+++ b/awards.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YST3WTEH3"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'G-7YST3WTEH3');
-        </script>
       <meta charset="UTF-8">
       <title>Awards – SA5IKN</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -165,6 +157,8 @@
             }
           });
         </script>
+        <!-- 100% privacy-first analytics -->
+        <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
         </body>
 
 </html>
