--- a/links.html
+++ b/links.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YST3WTEH3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-7YST3WTEH3');
-    </script>
   <meta charset="UTF-8">
   <title>Links – SA5IKN</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -338,6 +330,7 @@
       }
     });
   </script>
-  
+  <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
