--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YST3WTEH3"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-7YST3WTEH3');
-        </script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
             <title id="pageTitle">EME Observer - EME Station Map & EME QSO Planner</title>
@@ -1783,6 +1776,7 @@
                     annotations[`sunSep${sunSepInterval.start}`] = {
                         type: 'box',
                         xScaleID: 'x',
+                        yScaleID: 'y2',
                         xMin: sunSepInterval.start / 24, // Map to daily scale
                         xMax: (sunSepInterval.end + 1) / 24,
                         yMin: -30, // Span full declination range
@@ -1822,6 +1816,7 @@
                 annotations[`sunSep${sunSepInterval.start}`] = {
                     type: 'box',
                     xScaleID: 'x',
+                    yScaleID: 'y2',
                     xMin: sunSepInterval.start / 24,
                     xMax: (sunSepInterval.end + 1) / 24,
                     yMin: -30,
