--- a/eme-observer/eoml copy 2.html
+++ b/eme-observer/eoml copy 2.html
@@ -4094,8 +4094,5 @@
 </div>
 <!-- Ko-Fi -->
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script src="/kofi.js"></script>
-<!-- 100% privacy-first analytics -->
-<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-</body>
+<script src="/kofi.js"></script></body>
 </html>
