--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2261,9 +2261,12 @@
               });
             } else {
               chart.data.labels = labels;
-              chart.data.datasets[0].data = qthRates;
-              chart.data.datasets[1].data = qthElevs;
-              chart.data.datasets[2].data = qthDopps;
+
+              chart.data.datasets[0].data = qthRates;                    // libration
+              chart.data.datasets[1].data = qthElevs;                    // elevation
+              chart.data.datasets[2].data = qthDayData.azimuths || Array(288).fill(null);  // hidden azimuth – must be updated too!
+              chart.data.datasets[3].data = qthDopps;                    // DOPPLER – now correct index 3
+
               chart.options.plugins.annotation.annotations = qthAnnotation;
               chart.options.plugins.annotation.annotations.timeMarker.value = index;
               chart.options.scales.y3.max = maxDoppler;
@@ -2448,9 +2451,12 @@
               });
             } else {
               dxChart.data.labels = labels;
-              dxChart.data.datasets[0].data = dxRates;
-              dxChart.data.datasets[1].data = dxElevs;
-              dxChart.data.datasets[2].data = dxDopps;
+
+              dxChart.data.datasets[0].data = dxRates;                    // libration
+              dxChart.data.datasets[1].data = dxElevs;                    // elevation
+              dxChart.data.datasets[2].data = dxDayData.azimuths || Array(288).fill(null);  // hidden azimuth
+              dxChart.data.datasets[3].data = dxDopps;                    // DOPPLER – correct index 3
+
               dxChart.options.plugins.annotation.annotations = dxAnnotation;
               dxChart.options.plugins.annotation.annotations.timeMarker.value = index;
               dxChart.options.scales.y3.max = maxDoppler;
